--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js" 
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
+    "video.js": "^7.13.3",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4"
   },
